

2020-11-27 Franz Holzinger <franz@ttproducts.de>
    * works under TYPO3 9.5
    * remove piclens and cooliris

2020-07-22 Franz Holzinger <franz@ttproducts.de>
    * rename: wizard/index.php -> Classes/Controller/WizardController.php

2020-07-21 Franz Holzinger <franz@ttproducts.de>
    * rename: lib/replaceSpaces.php -> Classes/UserFunc/String.php
    * replace: script browse_links.php inside of flexform. see https://wiki.typo3.org/Exception/CMS/1437750231.
    * rename: lib/class.tx_chgallery_extraeval.php -> Classes/UserFunc/ExtraEval.php

2020-07-20 Franz Holzinger <franz@ttproducts.de>
    * rename: pi1/class.tx_chgallery_pi1_wizicon.php -> Classes/Controller/Plugin/WizardIcon.php
    * rename: lib/class.tx_chgallery_tca.php -> Classes/UserFunc/GalleryTca.php
    * rename: lib/class.tx_chgallery_utility.php -> Classes/Utility/FalUtility.php

2020-07-09 Franz Holzinger <franz@ttproducts.de>
* migration of documentation: manual.sxw -> manual.odt

