@@ -29,8 +29,8 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "php": ">=5.5.0,<=7.3.99",
-    "typo3/cms-core": ">=9.5.0,<=9.5.99",
+    "php": "^7.2",
+    "typo3/cms-core": "^9.5",
     "jambagecom/div2007": ">=1.10.33"
   },
   "autoload": {
@@ -42,7 +42,6 @@
     ]
   },
   "replace": {
-    "jambagecom/chgallery": "self.version",
     "typo3-ter/chgallery": "self.version"
   },
   "extra": {
