@@ -1,4 +1,5 @@
-
+2022-09-10  Franz Holzinger  <franz@ttproducts.de>
+    * compatibility TYPO3 8.7: deprecation no 77934: The field `select_key` of the table `tt_content` is not used in the core and has been removed.
 
 2020-11-27 Franz Holzinger <franz@ttproducts.de>
     * works under TYPO3 9.5
